# aech

./: .gitignore  CMakeLists.txt  README.md  aech.sln  game_engine.sln  imgui.ini
aech/: CMakeLists.txt  aech.vcxproj  aech.vcxproj.filters  aech_types.hpp  bounding_box.hpp  camera.cpp  camera.hpp  camera_frustum.cpp  camera_frustum.hpp  component_array.hpp  component_manager.cpp  component_manager.hpp  cube.cpp  cube.hpp  directional_light.cpp  directional_light.hpp  directional_light_renderer.cpp  directional_light_renderer.hpp  engine.cpp  engine.hpp  entity_manager.cpp  entity_manager.hpp  event.cpp  event.hpp  event_manager.cpp  event_manager.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer_cube.cpp  framebuffer_cube.hpp  framebuffer_library.cpp  framebuffer_library.hpp  gi_renderer.cpp  gi_renderer.hpp  glad.cpp  imgui.cpp  imgui.h  imgui.ini  imgui_demo.cpp  imgui_draw.cpp  (+85 more)
aech/include/glad/: glad.h
aech/resources/: sponza.mtl
aech/shaders/: ambient_diffuse_fragment.glsl  ambient_diffuse_vertex.glsl  ambient_fragment.glsl  ambient_irradiance_fragment.glsl  ambient_specular_fragment.glsl  ambient_specular_vertex.glsl  ambient_vertex.glsl  background_fragment.glsl  background_vertex.glsl  basic_fragment.glsl  basic_vertex.glsl  directional_fragment.glsl  directional_vertex.glsl  g_buffer_fragment.glsl  g_buffer_transparent_fragment.glsl  opaque_shadow_fragment.glsl  opaque_shadow_vertex.glsl  point_fragment.glsl  point_vertex.glsl  post_processing_fragment.glsl  probe_capture_fragment.glsl  probe_capture_skybox_fragment.glsl  probe_capture_skybox_vertex.glsl  probe_capture_transparent_fragment.glsl  probe_capture_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  ssao_blur_fragment.glsl  ssao_fragment.glsl  tonemap_fragment.glsl  transparent_fragment.glsl  transparent_shadow_fragment.glsl  transparent_shadow_vertex.glsl  transparent_vertex.glsl
aech/shaders/pbr/: brdf_fragment.glsl  cube_sample_vertex.glsl  equirectangular_to_cube_fragment.glsl  precompute_irradiance_fragment.glsl  prefilter_fragment.glsl  screen_quad_vertex.glsl
aech/src/components/: camera.cpp  camera.hpp  directional_light.cpp  directional_light.hpp  light_probe.cpp  light_probe.hpp  reflection_probe.cpp  reflection_probe.hpp  scene_node.cpp  scene_node.hpp  shadow_caster.hpp  transform.cpp  transform.hpp
aech/src/ecs/: component_array.hpp  component_manager.cpp  component_manager.hpp  engine.cpp  engine.hpp  entity_manager.cpp  entity_manager.hpp  system_manager.cpp  system_manager.hpp
aech/src/events/: event.cpp  event.hpp  event_manager.cpp  event_manager.hpp
aech/src/glad/: glad.cpp
aech/src/graphics/: framebuffer.cpp  framebuffer.hpp  framebuffer_cube.cpp  framebuffer_cube.hpp  mat.hpp  material.cpp  material.hpp  render_cache.cpp  render_cache.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_cube.cpp  texture_cube.hpp  texture_types.hpp
aech/src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
aech/src/managers/: input_manager.cpp  input_manager.hpp  window_manager.cpp  window_manager.hpp
aech/src/math/: mat.hpp  transforms.cpp  transforms.hpp  vec.hpp  vector_math.hpp
aech/src/meshes/: bounding_box.hpp  cube.cpp  cube.hpp  mesh.cpp  mesh.hpp  mesh_filter.cpp  mesh_filter.hpp  mesh_library.cpp  mesh_library.hpp  quad.cpp  quad.hpp  sphere.cpp  sphere.hpp
aech/src/misc/: camera_frustum.cpp  camera_frustum.hpp
aech/src/rendering/: renderer.cpp  renderer.hpp
aech/src/resource_management/: framebuffer_library.cpp  framebuffer_library.hpp  material_library.cpp  material_library.hpp  resource_manager.cpp  resource_manager.hpp
aech/src/samples/: main.cpp  main.hpp
aech/src/systems/: directional_light_renderer.cpp  directional_light_renderer.hpp  gi_renderer.cpp  gi_renderer.hpp  opaque_renderer.cpp  opaque_renderer.hpp  opaque_shadow_renderer.cpp  opaque_shadow_renderer.hpp  physics_system.cpp  physics_system.hpp  point_light_renderer.cpp  point_light_renderer.hpp  transparent_renderer.cpp  transparent_renderer.hpp  transparent_shadow_renderer.cpp  transparent_shadow_renderer.hpp
aech/textures_pbr/: sponza.mtl
game_engine/: aech_types.hpp  (+142 more)
(+27 files in other folders)
